fixed overflow & add animation text

--- a/src/app/_components/Banner.css
+++ b/src/app/_components/Banner.css
@@ -1,3 +1,16 @@
+@keyframes showcontent {
+  from {
+    opacity: 0;
+    transform: translate(0, 100px);
+    filter: blur(33px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(0, -50%);
+    filter: blur(0);
+  }
+}
+
 .container-banner {
   position: relative;
 }
@@ -7,21 +20,22 @@
   background-color: #fff;
   position: relative !important;
 }
-/* .bg-slider {
-  position: relative;
-} */
+
 .bg-slider-content {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: 20%;
+  animation: showcontent 1s ease-in-out 1 forwards;
 }
 .bg-slider-content h1 {
+  margin-bottom: 0;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   color: #fff;
-  margin-bottom: 2vh;
   font-size: 48px;
   text-shadow: 2px 2px #505050;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 1 forwards;
 }
 .swiper-wrapper {
   position: relative;
