--- a/src/app/page.css
+++ b/src/app/page.css
@@ -122,7 +122,6 @@
   justify-content: space-around;
   bottom: 0;
   display: flex;
-  overflow: hidden;
 }
 .footer-content {
   display: flex;
