--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -7,5 +7,5 @@ html {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
-  /* overflow: hidden !important; */
+  overflow-x: hidden !important;
 }
